--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0509.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0509.html
@@ -172,9 +172,9 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 162 552 617 590">
-        <span id="w_31" class="ocr_word" title="bbox 366 552 617 590" lang="grc">
+        <span id="w_31_0" class="ocr_word" title="bbox 366 552 617 590">
           <span class="alternatives">
-            <ins title="nlp 2.00">παραοιοωι.</ins>
+            <ins class="alt" title="nlp 2.00">παραοιωσι.</ins>
           </span>
         </span>
       </span>
@@ -398,9 +398,14 @@
             <ins class="alt" title="nlp 1.00">οὐ</ins>
           </span>
         </span>
-        <span id="w_74" class="ocr_word" title="bbox 438 1047 718 1098" lang="grc">
+        <span id="w_74_0" class="ocr_word" title="bbox 438 1047 718 1098">
           <span class="alternatives">
-            <ins title="nlp 2.00">χατηγορεῖται.</ins>
+            <ins class="alt" title="nlp 2.00">κατηγορεῖται.</ins>
+          </span>
+        </span>
+        <span id="w_74_1" class="ocr_word" title="bbox 438 1047 718 1098">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_75" class="ocr_word" title="bbox 786 1061 832 1084" lang="grc">
@@ -418,19 +423,14 @@
             <ins class="alt" title="nlp 2.00">προσεχῶς</ins>
           </span>
         </span>
-        <span id="w_77_1" class="ocr_word" title="bbox 973 1057 1179 1098">
+        <span id="w_77_1_0" class="ocr_word" title="bbox 973 1057 1179 1098">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">χατηγορούμενα</ins>
+            <ins class="alt" title="nlp 2.00">κατηγορούμενα</ins>
           </span>
         </span>
-        <span id="w_78" class="ocr_word" title="bbox 1572 1061 1647 1084" lang="grc">
+        <span id="w_77_1_1" class="ocr_word" title="bbox 973 1057 1179 1098">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τῶν</ins>
-          </span>
-        </span>
-        <span id="w_79" class="ocr_word" title="bbox 1686 1045 1842 1098" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἀτόμων</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
@@ -1271,9 +1271,14 @@
             <ins class="alt" title="nlp 1.00">ἄτομα.</ins>
           </span>
         </span>
-        <span id="w_244" class="ocr_word" title="bbox 449 2299 606 2343" lang="grc">
+        <span id="w_244_0" class="ocr_word" title="bbox 449 2299 606 2343">
           <span class="alternatives">
-            <ins title="nlp 2.00">διχαίως</ins>
+            <ins class="alt" title="nlp 2.00">δικαίως</ins>
+          </span>
+        </span>
+        <span id="w_244_1" class="ocr_word" title="bbox 449 2299 606 2343">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_245" class="ocr_word" title="bbox 643 2314 709 2338" lang="grc">
@@ -1319,11 +1324,6 @@
         <span id="w_253" class="ocr_word" title="bbox 1631 2296 1739 2337" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">εἶναι.</ins>
-          </span>
-        </span>
-        <span id="w_254" class="ocr_word" title="bbox 1800 2312 1848 2337" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τὰ</ins>
           </span>
         </span>
       </span>
@@ -1482,24 +1482,29 @@
             <ins class="alt" title="nlp 1.00">2</ins>
           </span>
         </span>
-        <span id="w_285" class="ocr_word" title="bbox 144 2653 370 2701" lang="grc">
+        <span id="w_285_0" class="ocr_word" title="bbox 144 2653 370 2701">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἐπεξέρχεται]</ins>
+            <ins class="alt" title="nlp 2.00">ἐπεξέρχεται]</ins>
           </span>
         </span>
-        <span id="w_286" class="ocr_word" title="bbox 406 2663 609 2699" lang="grc">
+        <span id="w_285_1" class="ocr_word" title="bbox 144 2653 370 2701">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἐξεξέρχεται</ins>
+            <ins class="alt" title="nlp 2.00">ἐξεξέρχεται</ins>
+          </span>
+        </span>
+        <span id="w_286_0" class="ocr_word" title="bbox 406 2663 609 2699">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">ἐξέρχεται</ins>
+          </span>
+        </span>
+        <span id="w_286_1" class="ocr_word" title="bbox 406 2663 609 2699">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_287" class="ocr_word" title="bbox 636 2655 680 2687" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">Κ1</ins>
-          </span>
-        </span>
-        <span id="w_288" class="ocr_word" title="bbox 694 2669 701 2687">
-          <span class="alternatives">
-            <ins title="nlp 2.00">:</ins>
+            <ins title="nlp 2.00">Κ1:</ins>
           </span>
         </span>
         <span id="w_289" class="ocr_word" title="bbox 733 2666 902 2699" lang="grc">
@@ -1522,16 +1527,6 @@
             <ins title="nlp 2.00">συμβαλλ.]</ins>
           </span>
         </span>
-        <span id="w_293" class="ocr_word" title="bbox 1399 2651 1678 2698" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">παραβαλλόμενα</ins>
-          </span>
-        </span>
-        <span id="w_294" class="ocr_word" title="bbox 1702 2653 1733 2686" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">Κ</ins>
-          </span>
-        </span>
       </span>
       <span class="ocr_line" title="bbox 99 2710 1708 2759">
         <span id="w_295" class="ocr_word" title="bbox 99 2711 120 2746">
@@ -1549,9 +1544,14 @@
             <ins class="alt" title="nlp 1.00">προσεχῶς</ins>
           </span>
         </span>
-        <span id="w_298" class="ocr_word" title="bbox 566 2724 857 2757" lang="grc">
+        <span id="w_298_0" class="ocr_word" title="bbox 566 2724 857 2757">
           <span class="alternatives">
-            <ins title="nlp 2.00">χατηγορούμενον</ins>
+            <ins class="alt" title="nlp 2.00">κατηγορούμενον</ins>
+          </span>
+        </span>
+        <span id="w_298_1" class="ocr_word" title="bbox 566 2724 857 2757">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_299" class="ocr_word" title="bbox 890 2711 1018 2755">
@@ -1591,12 +1591,6 @@
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">om.</ins>
             <del title="nlp 0.90">om.</del>
-          </span>
-        </span>
-        <span id="w_306" class="ocr_word" title="bbox 1680 2711 1708 2743">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">V</ins>
-            <del title="nlp 0.90">V</del>
           </span>
         </span>
       </span>
@@ -1640,12 +1634,7 @@
         </span>
         <span id="w_314_0" class="ocr_word" title="bbox 981 2771 1123 2814">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">scripsi</ins>
-          </span>
-        </span>
-        <span id="w_314_1" class="ocr_word" title="bbox 981 2771 1123 2814">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">:</ins>
+            <ins class="alt" title="nlp 2.00">scripsi:</ins>
           </span>
         </span>
         <span id="w_315" class="ocr_word" title="bbox 1150 2781 1275 2813" lang="grc">
@@ -1690,17 +1679,17 @@
         </span>
         <span id="w_322_0" class="ocr_word" title="bbox 208 2830 266 2863">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">Τ2</ins>
+            <ins class="alt" title="nlp 2.00">Τ2:</ins>
           </span>
         </span>
-        <span id="w_322_1" class="ocr_word" title="bbox 208 2830 266 2863">
+        <span id="w_323_0_0" class="ocr_word" title="bbox 302 2831 358 2863">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">:</ins>
+            <ins class="alt" title="nlp 2.00">καὶ</ins>
           </span>
         </span>
-        <span id="w_323_0" class="ocr_word" title="bbox 302 2831 358 2863">
+        <span id="w_323_0_1" class="ocr_word" title="bbox 302 2831 358 2863">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">χαὶ</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_323_1" class="ocr_word" title="bbox 302 2831 358 2863">
@@ -1710,17 +1699,17 @@
         </span>
         <span id="w_324_0" class="ocr_word" title="bbox 390 2831 472 2866">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">Κ</ins>
+            <ins class="alt" title="nlp 2.00">Κ:</ins>
           </span>
         </span>
-        <span id="w_324_1" class="ocr_word" title="bbox 390 2831 472 2866">
+        <span id="w_325_0_0" class="ocr_word" title="bbox 498 2830 545 2863">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">:</ins>
+            <ins class="alt" title="nlp 2.00">καὶ</ins>
           </span>
         </span>
-        <span id="w_325_0" class="ocr_word" title="bbox 498 2830 545 2863">
+        <span id="w_325_0_1" class="ocr_word" title="bbox 498 2830 545 2863">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">χαὶ</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_325_1" class="ocr_word" title="bbox 498 2830 545 2863">
@@ -1740,8 +1729,7 @@
         </span>
         <span id="w_329" class="ocr_word" title="bbox 1142 2840 1247 2861">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">xauTa</ins>
-            <del title="nlp 0.90">xauTa</del>
+            <ins title="nlp 2.00">ταῦτα</ins>
           </span>
         </span>
         <span id="w_330" class="ocr_word" title="bbox 1280 2839 1346 2861">
@@ -1764,16 +1752,6 @@
         <span id="w_332_1" class="ocr_word" title="bbox 1598 2829 1635 2861">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00">πρᾶξις</ins>
-          </span>
-        </span>
-        <span id="w_333" class="ocr_word" title="bbox 1811 2825 1859 2872">
-          <span class="alternatives">
-            <ins title="nlp 2.00">ιη'</ins>
-          </span>
-        </span>
-        <span id="w_334" class="ocr_word" title="bbox 1879 2828 1920 2859">
-          <span class="alternatives">
-            <ins title="nlp 2.00">V:</ins>
           </span>
         </span>
       </span>
@@ -2020,14 +1998,24 @@
             <ins class="alt" title="nlp 1.00">21</ins>
           </span>
         </span>
-        <span id="w_378" class="ocr_word" title="bbox 843 3064 929 3096" lang="grc">
+        <span id="w_378_0" class="ocr_word" title="bbox 843 3064 929 3096">
           <span class="alternatives">
-            <ins title="nlp 2.00">χαθὸ</ins>
+            <ins class="alt" title="nlp 2.00">καθὸ</ins>
           </span>
         </span>
-        <span id="w_379" class="ocr_word" title="bbox 956 3074 1099 3106">
+        <span id="w_378_1" class="ocr_word" title="bbox 843 3064 929 3096">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἑχατάρα</ins>
+            <ins class="alt" title="nlp 2.00"/>
+          </span>
+        </span>
+        <span id="w_379_0" class="ocr_word" title="bbox 956 3074 1099 3106">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">ἑκατέρα</ins>
+          </span>
+        </span>
+        <span id="w_379_1" class="ocr_word" title="bbox 956 3074 1099 3106">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_380" class="ocr_word" title="bbox 1125 3062 1254 3107">
@@ -2035,29 +2023,19 @@
             <ins title="nlp 2.00">αὐτῶν]</ins>
           </span>
         </span>
-        <span id="w_381" class="ocr_word" title="bbox 1281 3059 1363 3095">
+        <span id="w_381_0" class="ocr_word" title="bbox 1281 3059 1363 3095">
           <span class="alternatives">
-            <ins title="nlp 2.00">χαθ᾿ </ins>
+            <ins class="alt" title="nlp 2.00">δαθ᾿</ins>
           </span>
         </span>
-        <span id="w_382" class="ocr_word" title="bbox 1393 3074 1535 3103">
+        <span id="w_381_1" class="ocr_word" title="bbox 1281 3059 1363 3095">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἑχάτερα</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
-        <span id="w_383" class="ocr_word" title="bbox 1560 3062 1626 3095">
+        <span id="w_382_0" class="ocr_word" title="bbox 1393 3074 1535 3103">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἀπὸ</ins>
-          </span>
-        </span>
-        <span id="w_384" class="ocr_word" title="bbox 1651 3065 1709 3095">
-          <span class="alternatives">
-            <ins title="nlp 2.00">τοῦ</ins>
-          </span>
-        </span>
-        <span id="w_385" class="ocr_word" title="bbox 1737 3062 1765 3094">
-          <span class="alternatives">
-            <ins title="nlp 2.00">V</ins>
+            <ins class="alt" title="nlp 2.00">ἑκάτερα</ins>
           </span>
         </span>
       </span>
@@ -2113,14 +2091,24 @@
             <del title="nlp 0.90">TV</del>
           </span>
         </span>
-        <span id="w_396" class="ocr_word" title="bbox 1185 3133 1269 3158">
+        <span id="w_396_0" class="ocr_word" title="bbox 1185 3133 1269 3158">
           <span class="alternatives">
-            <ins title="nlp 2.00">εἶδος</ins>
+            <ins class="alt" title="nlp 2.00">εἶδος</ins>
           </span>
         </span>
-        <span id="w_397" class="ocr_word" title="bbox 1294 3122 1367 3162" lang="grc">
+        <span id="w_396_1" class="ocr_word" title="bbox 1185 3133 1269 3158">
           <span class="alternatives">
-            <ins title="nlp 2.00">(alr. 1.)</ins>
+            <ins class="alt" title="nlp 2.00">(alt.</ins>
+          </span>
+        </span>
+        <span id="w_397_0" class="ocr_word" title="bbox 1294 3122 1367 3162">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">alt.</ins>
+          </span>
+        </span>
+        <span id="w_397_1" class="ocr_word" title="bbox 1294 3122 1367 3162">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">l.)</ins>
           </span>
         </span>
         <span id="w_398_0" class="ocr_word" title="bbox 1626 3120 1669 3154">
@@ -2142,12 +2130,6 @@
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">om.</ins>
             <del title="nlp 0.90">om.</del>
-          </span>
-        </span>
-        <span id="w_401" class="ocr_word" title="bbox 1847 3119 1875 3151">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">V</ins>
-            <del title="nlp 0.90">V</del>
           </span>
         </span>
       </span>
@@ -2185,7 +2167,7 @@
         </span>
         <span id="w_408" class="ocr_word" title="bbox 911 3192 968 3213">
           <span class="alternatives">
-            <ins title="nlp 2.00">oὖν</ins>
+            <ins title="nlp 2.00">ὖν</ins>
           </span>
         </span>
         <span id="w_409" class="ocr_word" title="bbox 995 3191 1060 3214">
@@ -2199,20 +2181,20 @@
             <ins title="nlp 2.00">V</ins>
           </span>
         </span>
-        <span id="w_411" class="ocr_word" title="bbox 1301 3179 1378 3223">
+        <span id="w_411_0" class="ocr_word" title="bbox 1301 3179 1378 3223">
           <span class="alternatives">
-            <ins title="nlp 2.00">μίχν</ins>
+            <ins class="alt" title="nlp 2.00">μίαν</ins>
+          </span>
+        </span>
+        <span id="w_411_1" class="ocr_word" title="bbox 1301 3179 1378 3223">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_412" class="ocr_word" title="bbox 1405 3190 1470 3212">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">om.</ins>
             <del title="nlp 0.90">om.</del>
-          </span>
-        </span>
-        <span id="w_413" class="ocr_word" title="bbox 1490 3179 1517 3212">
-          <span class="alternatives">
-            <ins title="nlp 2.00">V</ins>
           </span>
         </span>
       </span>
