--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0603.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0603.html
@@ -77,12 +77,17 @@
       <span class="ocr_line" title="bbox 527 1139 1471 1198">
         <span id="w_12" class="ocr_word" title="bbox 527 1139 706 1194" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">&lt;’Αρχὴ τοῦ α&amp;#x772; τμήματος.</ins>
+            <ins title="nlp 2.00">&amp;#X003C;Ἀρχὴ τοῦ ᾱ τμήματος. </ins>
           </span>
         </span>
-        <span id="w_13" class="ocr_word" title="bbox 1227 1142 1399 1197" lang="grc">
+        <span id="w_13_0" class="ocr_word" title="bbox 1227 1142 1399 1197">
           <span class="alternatives">
-            <ins title="nlp 2.00">Πρᾶξις α&amp;#x772;&gt;</ins>
+            <ins class="alt" title="nlp 2.00">Πρᾶξις</ins>
+          </span>
+        </span>
+        <span id="w_13_1" class="ocr_word" title="bbox 1227 1142 1399 1197">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">ᾱ&amp;#x003E;</ins>
           </span>
         </span>
       </span>
@@ -93,9 +98,14 @@
             <del title="nlp 0.90">p.</del>
           </span>
         </span>
-        <span id="w_15" class="ocr_word" title="bbox 222 1277 309 1309">
+        <span id="w_15_0" class="ocr_word" title="bbox 222 1277 309 1309">
           <span class="alternatives">
-            <ins title="nlp 2.00">16α1</ins>
+            <ins class="alt" title="nlp 2.00">16al</ins>
+          </span>
+        </span>
+        <span id="w_15_1" class="ocr_word" title="bbox 222 1277 309 1309">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_16" class="ocr_word" title="bbox 383 1266 568 1319" lang="grc">
@@ -141,11 +151,6 @@
         <span id="w_24_0" class="ocr_word" title="bbox 1594 1287 1753 1311">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00">ἔπειτα</ins>
-          </span>
-        </span>
-        <span id="w_24_1" class="ocr_word" title="bbox 1594 1287 1753 1311">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">τί</ins>
           </span>
         </span>
       </span>
@@ -252,9 +257,9 @@
             <ins class="alt" title="nlp 2.00">τῷ</ins>
           </span>
         </span>
-        <span id="w_43_1" class="ocr_word" title="bbox 1702 1549 1756 1572">
+        <span id="w_43_1_0" class="ocr_word" title="bbox 1702 1549 1756 1572">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">α&amp;#x772;</ins>
+            <ins class="alt" title="nlp 2.00">ᾱ</ins>
           </span>
         </span>
       </span>
@@ -321,9 +326,14 @@
             <ins class="alt" title="nlp 1.00">τῷ</ins>
           </span>
         </span>
-        <span id="w_57" class="ocr_word" title="bbox 317 1682 341 1705">
+        <span id="w_57_0" class="ocr_word" title="bbox 317 1682 341 1705">
           <span class="alternatives">
-            <ins title="nlp 2.00">α&amp;#x772;</ins>
+            <ins class="alt" title="nlp 2.00">ᾱ</ins>
+          </span>
+        </span>
+        <span id="w_57_1" class="ocr_word" title="bbox 317 1682 341 1705">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_58" class="ocr_word" title="bbox 373 1680 554 1719" lang="grc">
@@ -376,14 +386,9 @@
             <ins class="alt" title="nlp 1.00">τῷ</ins>
           </span>
         </span>
-        <span id="w_68" class="ocr_word" title="bbox 1662 1666 1683 1722" lang="grc">
+        <span id="w_68_0" class="ocr_word" title="bbox 1662 1666 1683 1722">
           <span class="alternatives">
-            <ins title="nlp 2.00">β&amp;#x772;</ins>
-          </span>
-        </span>
-        <span id="w_69" class="ocr_word" title="bbox 1716 1684 1820 1708" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">μέρει</ins>
+            <ins class="alt" title="nlp 2.00">&amp;#x772;</ins>
           </span>
         </span>
       </span>
@@ -981,9 +986,14 @@
             <ins class="alt" title="nlp 1.00">παρὰ</ins>
           </span>
         </span>
-        <span id="w_187" class="ocr_word" title="bbox 857 2351 935 2388" lang="grc">
+        <span id="w_187_0" class="ocr_word" title="bbox 857 2351 935 2388">
           <span class="alternatives">
-            <ins title="nlp 2.00">“Ελλησι</ins>
+            <ins class="alt" title="nlp 2.00">Ἕλλησι</ins>
+          </span>
+        </span>
+        <span id="w_187_1" class="ocr_word" title="bbox 857 2351 935 2388">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_188" class="ocr_word" title="bbox 1133 2348 1196 2388" lang="grc">
@@ -1006,11 +1016,6 @@
             <ins class="alt" title="nlp 1.00">τοῖς</ins>
           </span>
         </span>
-        <span id="w_192" class="ocr_word" title="bbox 1579 2347 1814 2400" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">Αἰγυπτίοις.</ins>
-          </span>
-        </span>
       </span>
       <span class="ocr_line" title="bbox 92 2414 1816 2472">
         <span id="w_193" class="ocr_word" title="bbox 92 2432 133 2460">
@@ -1028,9 +1033,14 @@
             <ins class="alt" title="nlp 1.00">μὴν</ins>
           </span>
         </span>
-        <span id="w_196" class="ocr_word" title="bbox 396 2418 459 2458" lang="grc">
+        <span id="w_196_0" class="ocr_word" title="bbox 396 2418 459 2458">
           <span class="alternatives">
-            <ins title="nlp 2.00">χαὶ</ins>
+            <ins class="alt" title="nlp 2.00">καὶ</ins>
+          </span>
+        </span>
+        <span id="w_196_1" class="ocr_word" title="bbox 396 2418 459 2458">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_197" class="ocr_word" title="bbox 492 2434 536 2456" lang="grc">
@@ -1073,11 +1083,6 @@
             <ins class="alt" title="nlp 1.00">γὰρ</ins>
           </span>
         </span>
-        <span id="w_205" class="ocr_word" title="bbox 1655 2414 1816 2469" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ὀνόμασι</ins>
-          </span>
-        </span>
       </span>
       <span class="ocr_line" title="bbox 160 2481 1815 2541">
         <span id="w_206" class="ocr_word" title="bbox 160 2502 367 2541" lang="grc">
@@ -1090,9 +1095,14 @@
             <ins class="alt" title="nlp 1.00">οἱ</ins>
           </span>
         </span>
-        <span id="w_208" class="ocr_word" title="bbox 456 2483 645 2538" lang="grc">
+        <span id="w_208_0" class="ocr_word" title="bbox 456 2483 645 2538">
           <span class="alternatives">
-            <ins title="nlp 2.00">“Ελληνες,</ins>
+            <ins class="alt" title="nlp 2.00">Ἕλληνες,</ins>
+          </span>
+        </span>
+        <span id="w_208_1" class="ocr_word" title="bbox 456 2483 645 2538">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_209" class="ocr_word" title="bbox 668 2485 761 2539" lang="grc">
@@ -1133,11 +1143,6 @@
         <span id="w_216" class="ocr_word" title="bbox 1540 2485 1582 2523" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">δὲ</ins>
-          </span>
-        </span>
-        <span id="w_217" class="ocr_word" title="bbox 1597 2481 1815 2536" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">Αἰγύπτιοι</ins>
           </span>
         </span>
       </span>
@@ -1336,14 +1341,14 @@
             <ins class="alt" title="nlp 1.00">δημιουργεῖ.</ins>
           </span>
         </span>
-        <span id="w_256" class="ocr_word" title="bbox 1668 2685 1744 2728">
+        <span id="w_256_0" class="ocr_word" title="bbox 1668 2685 1744 2728">
           <span class="alternatives">
-            <ins title="nlp 2.00">“Οτι</ins>
+            <ins class="alt" title="nlp 2.00">Ὅτι</ins>
           </span>
         </span>
-        <span id="w_257" class="ocr_word" title="bbox 1776 2703 1816 2727" lang="grc">
+        <span id="w_256_1" class="ocr_word" title="bbox 1668 2685 1744 2728">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">δὲ</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
@@ -1621,24 +1626,19 @@
             <ins class="alt" title="nlp 1.00">3</ins>
           </span>
         </span>
-        <span id="w_311" class="ocr_word" title="bbox 133 3100 236 3145" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">’Αρχὴ</ins>
-          </span>
-        </span>
-        <span id="w_312" class="ocr_word" title="bbox 248 3121 290 3124">
-          <span class="alternatives">
-            <ins title="nlp 2.00">—</ins>
-          </span>
-        </span>
         <span id="w_313" class="ocr_word" title="bbox 301 3099 420 3145">
           <span class="alternatives">
-            <ins title="nlp 2.00">Πρᾶξις</ins>
+            <ins title="nlp 2.00">’Αρχὴ—Πρᾶξις</ins>
           </span>
         </span>
-        <span id="w_314" class="ocr_word" title="bbox 444 3114 466 3133" lang="grc">
+        <span id="w_314_0" class="ocr_word" title="bbox 444 3114 466 3133">
           <span class="alternatives">
-            <ins title="nlp 2.00">α&amp;#x772;</ins>
+            <ins class="alt" title="nlp 2.00">ᾱ</ins>
+          </span>
+        </span>
+        <span id="w_314_1" class="ocr_word" title="bbox 444 3114 466 3133">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_315" class="ocr_word" title="bbox 491 3111 532 3133">
@@ -1649,20 +1649,17 @@
         </span>
         <span id="w_316" class="ocr_word" title="bbox 557 3099 766 3143">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">reliquonun</ins>
-            <del title="nlp 0.90">reliquonun</del>
+            <ins title="nlp 2.00">reliquorum</ins>
           </span>
         </span>
         <span id="w_317" class="ocr_word" title="bbox 790 3099 968 3132">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">tituloram</ins>
-            <del title="nlp 0.90">tituloram</del>
+            <ins title="nlp 2.00">titulorum</ins>
           </span>
         </span>
         <span id="w_318" class="ocr_word" title="bbox 997 3097 1222 3131">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">similitudiue</ins>
-            <del title="nlp 0.90">similitudiue</del>
+            <ins title="nlp 2.00">similitudine</ins>
           </span>
         </span>
         <span id="w_319" class="ocr_word" title="bbox 1241 3096 1358 3129">
@@ -1676,20 +1673,14 @@
             <ins class="alt" title="nlp 1.00">5</ins>
           </span>
         </span>
-        <span id="w_321" class="ocr_word" title="bbox 1531 3096 1587 3128" lang="grc">
+        <span id="w_321_0" class="ocr_word" title="bbox 1531 3096 1587 3128">
           <span class="alternatives">
-            <ins title="nlp 2.00">χαὶ</ins>
+            <ins class="alt" title="nlp 2.00">καὶ</ins>
           </span>
         </span>
-        <span id="w_322" class="ocr_word" title="bbox 1612 3094 1792 3138" lang="grc">
+        <span id="w_321_1" class="ocr_word" title="bbox 1531 3096 1587 3128">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἀπόφανσις</ins>
-          </span>
-        </span>
-        <span id="w_323" class="ocr_word" title="bbox 1819 3104 1883 3127">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">om.</ins>
-            <del title="nlp 0.90">om.</del>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
