--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0510.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0510.html
@@ -277,19 +277,19 @@
             <ins class="alt" title="nlp 1.00">οὗ</ins>
           </span>
         </span>
-        <span id="w_51" class="ocr_word" title="bbox 1709 405 1907 462" lang="grc">
+        <span id="w_51_0" class="ocr_word" title="bbox 1709 405 1907 462">
           <span class="alternatives">
-            <ins title="nlp 2.00">᾿Ορέστης.</ins>
+            <ins class="alt" title="nlp 2.00">Ὀρέστης.</ins>
+          </span>
+        </span>
+        <span id="w_51_1" class="ocr_word" title="bbox 1709 405 1907 462">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_52" class="ocr_word" title="bbox 1959 408 2023 448" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">καὶ</ins>
-          </span>
-        </span>
-        <span id="w_53" class="ocr_word" title="bbox 2055 409 2118 448" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τὸν</ins>
           </span>
         </span>
       </span>
@@ -344,14 +344,14 @@
             <ins class="alt" title="nlp 1.00">μόνον</ins>
           </span>
         </span>
-        <span id="w_64" class="ocr_word" title="bbox 1565 477 1724 529" lang="grc">
+        <span id="w_64_0" class="ocr_word" title="bbox 1565 477 1724 529">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">λέγομεν</ins>
+            <ins class="alt" title="nlp 2.00">λέγομεν</ins>
           </span>
         </span>
-        <span id="w_65" class="ocr_word" title="bbox 1755 476 1902 530" lang="grc">
+        <span id="w_64_1" class="ocr_word" title="bbox 1565 477 1724 529">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">πατὴρ</ins>
+            <ins class="alt" title="nlp 2.00">(πατὴρ</ins>
           </span>
         </span>
         <span id="w_66" class="ocr_word" title="bbox 1934 492 2006 532" lang="grc">
@@ -386,9 +386,14 @@
             <ins class="alt" title="nlp 1.00">δὲ</ins>
           </span>
         </span>
-        <span id="w_72" class="ocr_word" title="bbox 1053 542 1228 599">
+        <span id="w_72_0" class="ocr_word" title="bbox 1053 542 1228 599">
           <span class="alternatives">
-            <ins title="nlp 2.00">᾿Ορέστην</ins>
+            <ins class="alt" title="nlp 2.00">Ὀρέστην</ins>
+          </span>
+        </span>
+        <span id="w_72_1" class="ocr_word" title="bbox 1053 542 1228 599">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_73" class="ocr_word" title="bbox 1262 561 1376 586" lang="grc">
@@ -414,11 +419,6 @@
         <span id="w_77" class="ocr_word" title="bbox 1776 545 1876 586" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">καθὸ</ins>
-          </span>
-        </span>
-        <span id="w_78" class="ocr_word" title="bbox 1914 547 2118 600" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἐγεννήθη,</ins>
           </span>
         </span>
       </span>
@@ -869,7 +869,7 @@
         </span>
         <span id="w_165" class="ocr_word" title="bbox 984 1099 1068 1153" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">καὶ</ins>
+            <ins title="nlp 2.00">(καὶ</ins>
           </span>
         </span>
         <span id="w_166" class="ocr_word" title="bbox 1100 1099 1273 1147" lang="grc">
@@ -949,9 +949,14 @@
             <ins class="alt" title="nlp 1.00">τοῦ</ins>
           </span>
         </span>
-        <span id="w_181" class="ocr_word" title="bbox 1165 1167 1257 1212" lang="grc">
+        <span id="w_181_0" class="ocr_word" title="bbox 1165 1167 1257 1212">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">Δῖός</ins>
+            <ins class="alt" title="nlp 2.00">Διὸς</ins>
+          </span>
+        </span>
+        <span id="w_181_1" class="ocr_word" title="bbox 1165 1167 1257 1212">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_182" class="ocr_word" title="bbox 1288 1168 1411 1220" lang="grc">
@@ -982,11 +987,6 @@
         <span id="w_187" class="ocr_word" title="bbox 1921 1168 2043 1207" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">πάντα</ins>
-          </span>
-        </span>
-        <span id="w_188" class="ocr_word" title="bbox 2075 1183 2120 1206" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τὰ</ins>
           </span>
         </span>
       </span>
@@ -1078,9 +1078,14 @@
             <ins class="alt" title="nlp 1.00">τοῦ</ins>
           </span>
         </span>
-        <span id="w_206" class="ocr_word" title="bbox 697 1308 955 1361" lang="grc">
+        <span id="w_206_0" class="ocr_word" title="bbox 697 1308 955 1361">
           <span class="alternatives">
-            <ins title="nlp 2.00">γεωικωτάτου</ins>
+            <ins class="alt" title="nlp 2.00">γενικωτάτου</ins>
+          </span>
+        </span>
+        <span id="w_206_1" class="ocr_word" title="bbox 697 1308 955 1361">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_207" class="ocr_word" title="bbox 986 1306 1119 1360" lang="grc">
@@ -1116,11 +1121,6 @@
         <span id="w_213" class="ocr_word" title="bbox 1787 1321 1857 1360" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">γὰρ</ins>
-          </span>
-        </span>
-        <span id="w_214" class="ocr_word" title="bbox 1880 1321 2119 1360" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">εὐποροῦμεν</ins>
           </span>
         </span>
       </span>
@@ -1376,9 +1376,9 @@
             <ins class="alt" title="nlp 1.00">οὔτε</ins>
           </span>
         </span>
-        <span id="w_263" class="ocr_word" title="bbox 2109 1586 2183 1623">
+        <span id="w_263_0" class="ocr_word" title="bbox 2109 1586 2183 1623">
           <span class="alternatives">
-            <ins title="nlp 2.00">191ν</ins>
+            <ins class="alt" title="nlp 2.00">191v</ins>
           </span>
         </span>
       </span>
@@ -2277,12 +2277,7 @@
         </span>
         <span id="w_437" class="ocr_word" title="bbox 537 2718 661 2760">
           <span class="alternatives">
-            <ins title="nlp 2.00">scripsi</ins>
-          </span>
-        </span>
-        <span id="w_438" class="ocr_word" title="bbox 671 2731 679 2750">
-          <span class="alternatives">
-            <ins title="nlp 2.00">:</ins>
+            <ins title="nlp 2.00">scripsi:</ins>
           </span>
         </span>
         <span id="w_439" class="ocr_word" title="bbox 706 2716 809 2763" lang="grc">
