--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0560.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0560.html
@@ -1442,9 +1442,9 @@
             <ins class="alt" title="nlp 2.00">Πρᾶξις</ins>
           </span>
         </span>
-        <span id="w_278_1" class="ocr_word" title="bbox 1125 1919 1294 1974">
+        <span id="w_278_1_0" class="ocr_word" title="bbox 1125 1919 1294 1974">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">λβ’.</ins>
+            <ins class="alt" title="nlp 2.00">λβ΄.</ins>
           </span>
         </span>
       </span>
@@ -1800,7 +1800,7 @@
         </span>
         <span id="w_345" class="ocr_word" title="bbox 2020 2599 2052 2631">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">4.</ins>
+            <ins title="nlp 2.00">4.5</ins>
           </span>
         </span>
         <span id="w_346" class="ocr_word" title="bbox 2073 2598 2172 2642" lang="grc">
@@ -1833,8 +1833,7 @@
         </span>
         <span id="w_351" class="ocr_word" title="bbox 840 2660 968 2693">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Alhen.</ins>
-            <del title="nlp 0.90">Alhen.</del>
+            <ins title="nlp 2.00">Athen.</ins>
           </span>
         </span>
         <span id="w_352" class="ocr_word" title="bbox 987 2659 1071 2693">
@@ -2181,8 +2180,7 @@
         </span>
         <span id="w_415" class="ocr_word" title="bbox 1951 2897 2001 2926">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Tui</ins>
-            <del title="nlp 0.90">Tui</del>
+            <ins title="nlp 2.00">τῶ</ins>
           </span>
         </span>
         <span id="w_416" class="ocr_word" title="bbox 2028 2893 2059 2926" lang="grc">
@@ -2259,9 +2257,14 @@
             <del title="nlp 0.90">p.</del>
           </span>
         </span>
-        <span id="w_429" class="ocr_word" title="bbox 1636 2952 1753 2987">
+        <span id="w_429_0" class="ocr_word" title="bbox 1636 2952 1753 2987">
           <span class="alternatives">
-            <ins title="nlp 2.00">593b</ins>
+            <ins class="alt" title="nlp 2.00">593b1</ins>
+          </span>
+        </span>
+        <span id="w_429_1" class="ocr_word" title="bbox 1636 2952 1753 2987">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_430" class="ocr_word" title="bbox 1790 2953 1840 2986">
@@ -2284,23 +2287,27 @@
         </span>
         <span id="w_433" class="ocr_word" title="bbox 2078 2950 2102 2986">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">F</ins>
-            <del title="nlp 0.90">F</del>
-          </span>
-        </span>
-        <span id="w_434" class="ocr_word" title="bbox 2132 2952 2172 2986">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">10</ins>
+            <ins title="nlp 2.00">Γ</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 347 3010 2123 3060">
-        <span id="w_437" class="ocr_word" title="bbox 551 3013 594 3046">
+        <span id="w_437_0" class="ocr_word" title="bbox 551 3013 594 3046">
           <span class="alternatives">
-            <ins title="nlp 2.00">p.673a8.28</ins>
+            <ins class="alt" title="nlp 2.00">p.</ins>
           </span>
         </span>
-        <span id="w_438_0" class="ocr_word" title="bbox 738 3024 865 3060">
+        <span id="w_437_1" class="ocr_word" title="bbox 551 3013 594 3046">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">673a8.</ins>
+          </span>
+        </span>
+        <span id="w_438_0_0" class="ocr_word" title="bbox 738 3024 865 3060">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">28</ins>
+          </span>
+        </span>
+        <span id="w_438_0_1" class="ocr_word" title="bbox 738 3024 865 3060">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00">ἐροδιοῦ</ins>
           </span>
@@ -2370,9 +2377,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 346 3070 2170 3117">
-        <span id="w_449" class="ocr_word" title="bbox 346 3082 522 3117" lang="grc">
+        <span id="w_449_0" class="ocr_word" title="bbox 346 3082 522 3117">
           <span class="alternatives">
-            <ins title="nlp 2.00">μυχησμὸς </ins>
+            <ins class="alt" title="nlp 2.00">μυκησμὸς</ins>
+          </span>
+        </span>
+        <span id="w_449_1" class="ocr_word" title="bbox 346 3082 522 3117">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_450" class="ocr_word" title="bbox 542 3073 570 3104">
@@ -2426,11 +2438,6 @@
         <span id="w_459" class="ocr_word" title="bbox 1942 3081 2002 3114" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τῆς</ins>
-          </span>
-        </span>
-        <span id="w_460" class="ocr_word" title="bbox 2028 3081 2170 3114" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">φυτικῆς</ins>
           </span>
         </span>
       </span>
@@ -2522,9 +2529,14 @@
             <ins class="alt" title="nlp 1.00">πρᾶξις</ins>
           </span>
         </span>
-        <span id="w_477" class="ocr_word" title="bbox 560 3187 616 3222">
+        <span id="w_477_0" class="ocr_word" title="bbox 560 3187 616 3222">
           <span class="alternatives">
-            <ins title="nlp 2.00">λα‘</ins>
+            <ins class="alt" title="nlp 2.00">λα΄</ins>
+          </span>
+        </span>
+        <span id="w_477_1" class="ocr_word" title="bbox 560 3187 616 3222">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_478" class="ocr_word" title="bbox 645 3190 690 3222" lang="grc">
@@ -2568,12 +2580,6 @@
         <span id="w_485" class="ocr_word" title="bbox 1417 3189 1515 3234" lang="grc">
           <span class="alternatives">
             <ins title="nlp 2.00">συμβ.</ins>
-          </span>
-        </span>
-        <span id="w_486" class="ocr_word" title="bbox 1542 3189 1573 3223">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">V</ins>
-            <del title="nlp 0.90">V</del>
           </span>
         </span>
       </span>
