--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0511.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0511.html
@@ -984,9 +984,9 @@
             <ins class="alt" title="nlp 1.00">καὶ</ins>
           </span>
         </span>
-        <span id="w_189" class="ocr_word" title="bbox 1749 1185 1867 1238" lang="grc">
+        <span id="w_189_0" class="ocr_word" title="bbox 1749 1185 1867 1238">
           <span class="alternatives">
-            <ins title="nlp 2.00">πράγματοςλ.</ins>
+            <ins class="alt" title="nlp 2.00">πράγματος.</ins>
           </span>
         </span>
       </span>
@@ -1343,9 +1343,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 189 1665 1926 1723">
-        <span id="w_260" class="ocr_word" title="bbox 189 1667 508 1721" lang="grc">
+        <span id="w_260_0" class="ocr_word" title="bbox 189 1667 508 1721">
           <span class="alternatives">
-            <ins title="nlp 2.00">ὁμολογουμένως</ins>
+            <ins class="alt" title="nlp 2.00">ὁμολογουμένως</ins>
+          </span>
+        </span>
+        <span id="w_260_1" class="ocr_word" title="bbox 189 1667 508 1721">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">|</ins>
           </span>
         </span>
         <span id="w_262" class="ocr_word" title="bbox 542 1682 632 1708" lang="grc">
@@ -1893,7 +1898,7 @@
         </span>
         <span id="w_368" class="ocr_word" title="bbox 397 2291 450 2344" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">εἰ</ins>
+            <ins title="nlp 2.00">(εἰ</ins>
           </span>
         </span>
         <span id="w_369" class="ocr_word" title="bbox 481 2307 550 2345" lang="grc">
@@ -2409,7 +2414,7 @@
       <span class="ocr_line" title="bbox 118 2828 1878 2880">
         <span id="w_462" class="ocr_word" title="bbox 118 2836 159 2870" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">18 ὄν om. K </ins>
+            <ins title="nlp 2.00">ὄν om. K </ins>
           </span>
         </span>
         <span id="w_463" class="ocr_word" title="bbox 539 2848 649 2870" lang="grc">
@@ -2424,7 +2429,7 @@
         </span>
         <span id="w_465" class="ocr_word" title="bbox 1329 2835 1369 2868" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">20 εἰ οὖν ὂν] ἀλλ᾿ οὐ Κ</ins>
+            <ins title="nlp 2.00">εἰ οὖν ὂν] ἀλλ᾿ οὐ Κ</ins>
           </span>
         </span>
       </span>
