--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0604.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0604.html
@@ -34,8 +34,7 @@
         </span>
         <span id="w_4" class="ocr_word" title="bbox 1019 89 1071 121">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">DK</ins>
-            <del title="nlp 0.90">DK</del>
+            <ins title="nlp 2.00">DE</ins>
           </span>
         </span>
         <span id="w_5" class="ocr_word" title="bbox 1103 89 1531 122">
@@ -121,14 +120,14 @@
             <ins class="alt" title="nlp 1.00">τῷ</ins>
           </span>
         </span>
-        <span id="w_22" class="ocr_word" title="bbox 1916 223 1940 247">
+        <span id="w_22_0" class="ocr_word" title="bbox 1916 223 1940 247">
           <span class="alternatives">
-            <ins title="nlp 2.00">α&amp;#x772;</ins>
+            <ins class="alt" title="nlp 2.00">ᾱ</ins>
           </span>
         </span>
-        <span id="w_23" class="ocr_word" title="bbox 1982 223 2087 262" lang="grc">
+        <span id="w_22_1" class="ocr_word" title="bbox 1916 223 1940 247">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">μέρει</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
@@ -163,9 +162,14 @@
             <ins class="alt" title="nlp 1.00">τῷ</ins>
           </span>
         </span>
-        <span id="w_30" class="ocr_word" title="bbox 1304 271 1325 328" lang="grc">
+        <span id="w_30_0" class="ocr_word" title="bbox 1304 271 1325 328">
           <span class="alternatives">
-            <ins title="nlp 2.00">β&amp;#x772;</ins>
+            <ins class="alt" title="nlp 2.00">β&amp;#x772;</ins>
+          </span>
+        </span>
+        <span id="w_30_1" class="ocr_word" title="bbox 1304 271 1325 328">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_31" class="ocr_word" title="bbox 1365 288 1489 328" lang="grc">
@@ -186,11 +190,6 @@
         <span id="w_34" class="ocr_word" title="bbox 1773 276 1974 328" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἀναλογίαν</ins>
-          </span>
-        </span>
-        <span id="w_35" class="ocr_word" title="bbox 2006 291 2087 315" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τινὰ</ins>
           </span>
         </span>
       </span>
@@ -329,9 +328,9 @@
             <del title="nlp 0.90">f.</del>
           </span>
         </span>
-        <span id="w_62" class="ocr_word" title="bbox 2105 422 2156 450">
+        <span id="w_62_0" class="ocr_word" title="bbox 2105 422 2156 450">
           <span class="alternatives">
-            <ins title="nlp 2.00">36ν</ins>
+            <ins class="alt" title="nlp 2.00">36v</ins>
           </span>
         </span>
       </span>
@@ -1270,14 +1269,9 @@
             <ins class="alt" title="nlp 1.00">λέγομεν</ins>
           </span>
         </span>
-        <span id="w_244" class="ocr_word" title="bbox 614 1575 622 1591" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">῾</ins>
-          </span>
-        </span>
         <span id="w_245" class="ocr_word" title="bbox 643 1574 864 1616" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ὑποκείσθω</ins>
+            <ins class="alt" title="nlp 2.00">῾ὑποκείσθω</ins>
           </span>
         </span>
         <span id="w_246" class="ocr_word" title="bbox 898 1590 920 1628" lang="grc">
@@ -1287,7 +1281,7 @@
         </span>
         <span id="w_247" class="ocr_word" title="bbox 953 1590 1001 1628">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">77]</ins>
+            <ins title="nlp 2.00">γῆ</ins>
           </span>
         </span>
         <span id="w_248" class="ocr_word" title="bbox 1046 1589 1207 1628" lang="grc">
@@ -1642,9 +1636,14 @@
             <ins class="alt" title="nlp 1.00">ἢ</ins>
           </span>
         </span>
-        <span id="w_316" class="ocr_word" title="bbox 903 1988 1009 2026" lang="grc">
+        <span id="w_316_0" class="ocr_word" title="bbox 903 1988 1009 2026">
           <span class="alternatives">
-            <ins title="nlp 2.00">πλεῖω’,</ins>
+            <ins class="alt" title="nlp 2.00">πλεῖν᾿,</ins>
+          </span>
+        </span>
+        <span id="w_316_1" class="ocr_word" title="bbox 903 1988 1009 2026">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_318" class="ocr_word" title="bbox 1094 2002 1113 2025" lang="grc">
@@ -1685,11 +1684,6 @@
         <span id="w_325" class="ocr_word" title="bbox 1817 1987 1924 2026" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τόνδε</ins>
-          </span>
-        </span>
-        <span id="w_326" class="ocr_word" title="bbox 1962 2001 2082 2040" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">γῆμαι</ins>
           </span>
         </span>
       </span>
@@ -1825,8 +1819,7 @@
         </span>
         <span id="w_352" class="ocr_word" title="bbox 856 2210 887 2231">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">to</ins>
-            <del title="nlp 0.90">to</del>
+            <ins title="nlp 2.00">ὦ</ins>
           </span>
         </span>
         <span id="w_353" class="ocr_word" title="bbox 926 2190 1171 2240" lang="grc">
@@ -2260,7 +2253,7 @@
         </span>
         <span id="w_436" class="ocr_word" title="bbox 1279 2687 1345 2711" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τοὐ</ins>
+            <ins title="nlp 2.00">τοῦ</ins>
           </span>
         </span>
         <span id="w_437" class="ocr_word" title="bbox 1384 2671 1587 2725" lang="grc">
@@ -2331,8 +2324,7 @@
         </span>
         <span id="w_450" class="ocr_word" title="bbox 1383 2863 1515 2886">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">erasiim</ins>
-            <del title="nlp 0.90">erasiim</del>
+            <ins title="nlp 2.00">erasum</ins>
           </span>
         </span>
         <span id="w_451" class="ocr_word" title="bbox 1542 2853 1568 2885">
@@ -2356,9 +2348,9 @@
             <ins class="alt" title="nlp 1.00">ταῖς</ins>
           </span>
         </span>
-        <span id="w_455" class="ocr_word" title="bbox 1914 2849 2149 2896" lang="grc">
+        <span id="w_455_0" class="ocr_word" title="bbox 1914 2849 2149 2896">
           <span class="alternatives">
-            <ins title="nlp 2.00">Κατηγορίαις</ins>
+            <ins class="alt" title="nlp 2.00">Κατηγορίαις]</ins>
           </span>
         </span>
       </span>
@@ -2392,14 +2384,7 @@
         </span>
         <span id="w_461" class="ocr_word" title="bbox 870 2912 1030 2944">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Aminon.</ins>
-            <del title="nlp 0.90">Aminon.</del>
-          </span>
-        </span>
-        <span id="w_462" class="ocr_word" title="bbox 1056 2911 1115 2944">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">fol.</ins>
-            <del title="nlp 0.90">fol.</del>
+            <ins title="nlp 2.00">Ammon.</ins>
           </span>
         </span>
         <span id="w_463" class="ocr_word" title="bbox 1135 2910 1178 2943">
@@ -2414,7 +2399,7 @@
         </span>
         <span id="w_465" class="ocr_word" title="bbox 1401 2909 1587 2957" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">Παρμενίδη</ins>
+            <ins title="nlp 2.00">Παρμενίδῃ</ins>
           </span>
         </span>
         <span id="w_466" class="ocr_word" title="bbox 1615 2908 1819 2943">
@@ -2497,7 +2482,7 @@
         </span>
         <span id="w_480" class="ocr_word" title="bbox 1940 2980 1986 3000" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τῷ·</ins>
+            <ins title="nlp 2.00">τῷ</ins>
           </span>
         </span>
         <span id="w_481" class="ocr_word" title="bbox 2015 2965 2148 3012" lang="grc">
@@ -2537,8 +2522,7 @@
         </span>
         <span id="w_487" class="ocr_word" title="bbox 680 3030 830 3061">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">ceteium</ins>
-            <del title="nlp 0.90">ceteium</del>
+            <ins title="nlp 2.00">ceterum</ins>
           </span>
         </span>
         <span id="w_488" class="ocr_word" title="bbox 856 3029 960 3062">
@@ -2576,20 +2560,20 @@
             <ins class="alt" title="nlp 1.00">30</ins>
           </span>
         </span>
-        <span id="w_494" class="ocr_word" title="bbox 1623 3023 1809 3063" lang="grc">
+        <span id="w_494_0" class="ocr_word" title="bbox 1623 3023 1809 3063">
           <span class="alternatives">
-            <ins title="nlp 2.00">Kἀλλιχλες</ins>
+            <ins class="alt" title="nlp 2.00">Κάλλικλες</ins>
+          </span>
+        </span>
+        <span id="w_494_1" class="ocr_word" title="bbox 1623 3023 1809 3063">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_495" class="ocr_word" title="bbox 1835 3026 1860 3059">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">P</ins>
             <del title="nlp 0.90">P</del>
-          </span>
-        </span>
-        <span id="w_496" class="ocr_word" title="bbox 2027 3024 2149 3060" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">δίχαιος</ins>
           </span>
         </span>
       </span>
