--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0653.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0653.html
@@ -93,13 +93,17 @@
         </span>
         <span id="w_15" class="ocr_word" title="bbox 828 251 894 290">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">akv</ins>
-            <del title="nlp 0.90">akv</del>
+            <ins title="nlp 2.00">μὲν</ins>
           </span>
         </span>
-        <span id="w_16" class="ocr_word" title="bbox 928 253 1121 307" lang="grc">
+        <span id="w_16_0" class="ocr_word" title="bbox 928 253 1121 307">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἐνδέχειαι</ins>
+            <ins class="alt" title="nlp 2.00">ἐνδέχεται</ins>
+          </span>
+        </span>
+        <span id="w_16_1" class="ocr_word" title="bbox 928 253 1121 307">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_17" class="ocr_word" title="bbox 1153 272 1245 296" lang="grc">
@@ -130,11 +134,6 @@
         <span id="w_22" class="ocr_word" title="bbox 1597 275 1642 298" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τὰ</ins>
-          </span>
-        </span>
-        <span id="w_23" class="ocr_word" title="bbox 1663 274 1798 298" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">κοινῶς</ins>
           </span>
         </span>
       </span>
@@ -271,9 +270,9 @@
             <ins class="alt" title="nlp 1.00">ἅμα</ins>
           </span>
         </span>
-        <span id="w_50" class="ocr_word" title="bbox 1741 394 1798 434" lang="grc">
+        <span id="w_50_0" class="ocr_word" title="bbox 1741 394 1798 434">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">λέ-</ins>
+            <ins class="alt" title="nlp 2.00">λέγεσθαι,</ins>
           </span>
         </span>
       </span>
@@ -546,9 +545,14 @@
             <ins class="alt" title="nlp 1.00">μὲν</ins>
           </span>
         </span>
-        <span id="w_103" class="ocr_word" title="bbox 1004 730 1307 783" lang="grc">
+        <span id="w_103_0" class="ocr_word" title="bbox 1004 730 1307 783">
           <span class="alternatives">
-            <ins title="nlp 2.00">χαθολιχώτεςρον</ins>
+            <ins class="alt" title="nlp 2.00">καθολικώτερον</ins>
+          </span>
+        </span>
+        <span id="w_103_1" class="ocr_word" title="bbox 1004 730 1307 783">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_104" class="ocr_word" title="bbox 1346 746 1387 770" lang="grc">
@@ -571,11 +575,6 @@
             <ins title="nlp 2.00">f.</ins>
           </span>
         </span>
-        <span id="w_108" class="ocr_word" title="bbox 1818 743 1869 771">
-          <span class="alternatives">
-            <ins title="nlp 2.00">70v</ins>
-          </span>
-        </span>
       </span>
       <span class="ocr_line" title="bbox 141 796 1798 851">
         <span id="w_109" class="ocr_word" title="bbox 141 810 173 834" lang="grc">
@@ -588,9 +587,14 @@
             <ins title="nlp 2.00">δὲ</ins>
           </span>
         </span>
-        <span id="w_111" class="ocr_word" title="bbox 293 796 427 850" lang="grc">
+        <span id="w_111_0" class="ocr_word" title="bbox 293 796 427 850">
           <span class="alternatives">
-            <ins title="nlp 2.00">ποτε</ins>
+            <ins class="alt" title="nlp 2.00">συμβῇ</ins>
+          </span>
+        </span>
+        <span id="w_111_1" class="ocr_word" title="bbox 293 796 427 850">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_112" class="ocr_word" title="bbox 467 810 559 834" lang="grc">
@@ -608,9 +612,14 @@
             <ins class="alt" title="nlp 1.00">μὲν</ins>
           </span>
         </span>
-        <span id="w_115" class="ocr_word" title="bbox 778 796 1083 851" lang="grc">
+        <span id="w_115_0" class="ocr_word" title="bbox 778 796 1083 851">
           <span class="alternatives">
-            <ins title="nlp 2.00">χαθολιχώτερον</ins>
+            <ins class="alt" title="nlp 2.00">καθολικώτερον</ins>
+          </span>
+        </span>
+        <span id="w_115_1" class="ocr_word" title="bbox 778 796 1083 851">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_116" class="ocr_word" title="bbox 1126 813 1167 837" lang="grc">
@@ -633,16 +642,6 @@
             <ins class="alt" title="nlp 1.00">οὐ</ins>
           </span>
         </span>
-        <span id="w_120" class="ocr_word" title="bbox 1670 803 1730 840" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">δεῖ</ins>
-          </span>
-        </span>
-        <span id="w_121" class="ocr_word" title="bbox 1755 817 1798 842" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τὸ</ins>
-          </span>
-        </span>
       </span>
       <span class="ocr_line" title="bbox 78 864 1800 923">
         <span id="w_122" class="ocr_word" title="bbox 78 878 116 905">
@@ -660,9 +659,14 @@
             <ins class="alt" title="nlp 1.00">τοῦ</ins>
           </span>
         </span>
-        <span id="w_125" class="ocr_word" title="bbox 439 865 748 916" lang="grc">
+        <span id="w_125_0" class="ocr_word" title="bbox 439 865 748 916">
           <span class="alternatives">
-            <ins title="nlp 2.00">χαθολιχωτέρου</ins>
+            <ins class="alt" title="nlp 2.00">καθολικωτέρου</ins>
+          </span>
+        </span>
+        <span id="w_125_1" class="ocr_word" title="bbox 439 865 748 916">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_126" class="ocr_word" title="bbox 781 864 1059 915" lang="grc">
@@ -685,18 +689,8 @@
             <ins class="alt" title="nlp 1.00">συνωνύμως</ins>
           </span>
         </span>
-        <span id="w_130" class="ocr_word" title="bbox 1642 884 1800 923" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">κατηγο-</ins>
-          </span>
-        </span>
       </span>
       <span class="ocr_line" title="bbox 142 929 1797 989">
-        <span id="w_131" class="ocr_word" title="bbox 142 947 292 986" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ροῦνται</ins>
-          </span>
-        </span>
         <span id="w_132" class="ocr_word" title="bbox 322 934 387 971" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τοὐ</ins>
@@ -878,14 +872,14 @@
             <ins class="alt" title="nlp 1.00">βαδίζον</ins>
           </span>
         </span>
-        <span id="w_167" class="ocr_word" title="bbox 502 1135 601 1175" lang="grc">
+        <span id="w_167_0" class="ocr_word" title="bbox 502 1135 601 1175">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἐστίν</ins>
+            <ins class="alt" title="nlp 2.00">ἐστίν᾿,</ins>
           </span>
         </span>
-        <span id="w_168" class="ocr_word" title="bbox 616 1133 624 1147">
+        <span id="w_167_1" class="ocr_word" title="bbox 502 1135 601 1175">
           <span class="alternatives">
-            <ins title="nlp 2.00">’</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_170" class="ocr_word" title="bbox 689 1134 773 1174" lang="grc">
@@ -926,11 +920,6 @@
         <span id="w_177" class="ocr_word" title="bbox 1585 1139 1700 1184" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἄλλος</ins>
-          </span>
-        </span>
-        <span id="w_178" class="ocr_word" title="bbox 1733 1156 1799 1181" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τοῦ</ins>
           </span>
         </span>
       </span>
@@ -1027,9 +1016,14 @@
             <ins class="alt" title="nlp 1.00">δὲ</ins>
           </span>
         </span>
-        <span id="w_197" class="ocr_word" title="bbox 684 1271 926 1326" lang="grc">
+        <span id="w_197_0" class="ocr_word" title="bbox 684 1271 926 1326">
           <span class="alternatives">
-            <ins title="nlp 2.00">συβεβηχός·</ins>
+            <ins class="alt" title="nlp 2.00">συμβεβηκός·</ins>
+          </span>
+        </span>
+        <span id="w_197_1" class="ocr_word" title="bbox 684 1271 926 1326">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_199" class="ocr_word" title="bbox 997 1288 1129 1327" lang="grc">
@@ -1055,11 +1049,6 @@
         <span id="w_203" class="ocr_word" title="bbox 1600 1276 1730 1320" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">οὐσίας</ins>
-          </span>
-        </span>
-        <span id="w_204" class="ocr_word" title="bbox 1759 1292 1799 1316" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τε</ins>
           </span>
         </span>
       </span>
@@ -1099,9 +1088,14 @@
             <ins title="nlp 2.00">῾ ἄνθρωπος</ins>
           </span>
         </span>
-        <span id="w_212" class="ocr_word" title="bbox 1235 1341 1396 1397" lang="grc">
+        <span id="w_212_0" class="ocr_word" title="bbox 1235 1341 1396 1397">
           <span class="alternatives">
-            <ins title="nlp 2.00">βαδὀζει’</ins>
+            <ins class="alt" title="nlp 2.00">βαδίζει᾿</ins>
+          </span>
+        </span>
+        <span id="w_212_1" class="ocr_word" title="bbox 1235 1341 1396 1397">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_213" class="ocr_word" title="bbox 1436 1344 1550 1386" lang="grc">
@@ -1112,11 +1106,6 @@
         <span id="w_214" class="ocr_word" title="bbox 1580 1344 1690 1396" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">λόγος</ins>
-          </span>
-        </span>
-        <span id="w_215" class="ocr_word" title="bbox 1721 1358 1800 1384" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἐστὶ</ins>
           </span>
         </span>
       </span>
@@ -1267,7 +1256,7 @@
         </span>
         <span id="w_244" class="ocr_word" title="bbox 1038 1561 1346 1600" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">χατηγοροῦνται,</ins>
+            <ins title="nlp 2.00">κατηγοροῦνται,</ins>
           </span>
         </span>
         <span id="w_245" class="ocr_word" title="bbox 1378 1562 1455 1586" lang="grc">
@@ -1285,9 +1274,9 @@
             <ins class="alt" title="nlp 1.00">δίπουν</ins>
           </span>
         </span>
-        <span id="w_248" class="ocr_word" title="bbox 1706 1546 1803 1602">
+        <span id="w_248_0" class="ocr_word" title="bbox 1706 1546 1803 1602">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C;χαὶ, &amp;#x003E;</ins>
+            <ins class="alt" title="nlp 2.00">&amp;#x003C;καὶ&amp;#x003E;</ins>
           </span>
         </span>
       </span>
@@ -1317,9 +1306,14 @@
             <ins class="alt" title="nlp 1.00">ἀνθρώπου,</ins>
           </span>
         </span>
-        <span id="w_254" class="ocr_word" title="bbox 853 1612 949 1667">
+        <span id="w_254_0" class="ocr_word" title="bbox 853 1612 949 1667">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C; χαὶ&amp;#x003E;</ins>
+            <ins class="alt" title="nlp 2.00">&amp;#x003C;καὶ&amp;#x003E;</ins>
+          </span>
+        </span>
+        <span id="w_254_1" class="ocr_word" title="bbox 853 1612 949 1667">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_255" class="ocr_word" title="bbox 986 1615 1232 1667" lang="grc">
@@ -1340,11 +1334,6 @@
         <span id="w_258" class="ocr_word" title="bbox 1535 1618 1600 1655" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τοῦ</ins>
-          </span>
-        </span>
-        <span id="w_259" class="ocr_word" title="bbox 1633 1631 1801 1669" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">μερικοῦ,</ins>
           </span>
         </span>
       </span>
@@ -1610,12 +1599,6 @@
         <span id="w_310" class="ocr_word" title="bbox 908 1971 963 1994" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τῷ</ins>
-          </span>
-        </span>
-        <span id="w_311" class="ocr_word" title="bbox 991 1954 999 1969">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">’</ins>
-            <del title="nlp 0.90">’</del>
           </span>
         </span>
         <span id="w_312" class="ocr_word" title="bbox 1013 1955 1144 1995" lang="grc">
@@ -2129,9 +2112,9 @@
             <ins class="alt" title="nlp 1.00">καὶ</ins>
           </span>
         </span>
-        <span id="w_412" class="ocr_word" title="bbox 1739 2515 1803 2540" lang="grc">
+        <span id="w_412_0" class="ocr_word" title="bbox 1739 2515 1803 2540">
           <span class="alternatives">
-            <ins title="nlp 2.00">χανόνα</ins>
+            <ins class="alt" title="nlp 2.00">κανόνα</ins>
           </span>
         </span>
       </span>
@@ -2238,9 +2221,14 @@
             <ins class="alt" title="nlp 1.00">οὖν,</ins>
           </span>
         </span>
-        <span id="w_434" class="ocr_word" title="bbox 1209 2635 1370 2690" lang="grc">
+        <span id="w_434_0" class="ocr_word" title="bbox 1209 2635 1370 2690">
           <span class="alternatives">
-            <ins title="nlp 2.00">ὁπηνίχα</ins>
+            <ins class="alt" title="nlp 2.00">ὁπηνίκα</ins>
+          </span>
+        </span>
+        <span id="w_434_1" class="ocr_word" title="bbox 1209 2635 1370 2690">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_435" class="ocr_word" title="bbox 1400 2652 1423 2689" lang="grc">
@@ -2253,14 +2241,9 @@
             <ins class="alt" title="nlp 1.00">λέξις</ins>
           </span>
         </span>
-        <span id="w_437" class="ocr_word" title="bbox 1573 2651 1778 2691" lang="grc">
+        <span id="w_437_0" class="ocr_word" title="bbox 1573 2651 1778 2691">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">προφανῶς</ins>
-          </span>
-        </span>
-        <span id="w_438" class="ocr_word" title="bbox 1797 2644 1875 2673">
-          <span class="alternatives">
-            <ins title="nlp 2.00">f.7lr</ins>
+            <ins class="alt" title="nlp 2.00">προφανῶς</ins>
           </span>
         </span>
       </span>
@@ -2325,9 +2308,9 @@
             <ins class="alt" title="nlp 1.00">ὄρνιθος</ins>
           </span>
         </span>
-        <span id="w_451" class="ocr_word" title="bbox 1729 2703 1803 2757" lang="grc">
+        <span id="w_451_0" class="ocr_word" title="bbox 1729 2703 1803 2757">
           <span class="alternatives">
-            <ins title="nlp 2.00">(ἑνταῦθα</ins>
+            <ins class="alt" title="nlp 2.00">(ἐνταῦθα</ins>
           </span>
         </span>
       </span>
@@ -2477,8 +2460,7 @@
       <span class="ocr_line" title="bbox 75 3055 1827 3105">
         <span id="w_480" class="ocr_word" title="bbox 75 3061 163 3105">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">xtX.]</ins>
-            <del title="nlp 0.90">xtX.]</del>
+            <ins title="nlp 2.00">κτλ.]</ins>
           </span>
         </span>
         <span id="w_481" class="ocr_word" title="bbox 191 3062 233 3095" lang="grc">
@@ -2488,8 +2470,7 @@
         </span>
         <span id="w_482" class="ocr_word" title="bbox 259 3062 419 3095">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Ammou.</ins>
-            <del title="nlp 0.90">Ammou.</del>
+            <ins title="nlp 2.00">Ammon.</ins>
           </span>
         </span>
         <span id="w_483" class="ocr_word" title="bbox 445 3062 501 3095">
@@ -2520,12 +2501,7 @@
         </span>
         <span id="w_488" class="ocr_word" title="bbox 1060 3059 1183 3102">
           <span class="alternatives">
-            <ins title="nlp 2.00">scripsi</ins>
-          </span>
-        </span>
-        <span id="w_489" class="ocr_word" title="bbox 1193 3071 1200 3090">
-          <span class="alternatives">
-            <ins title="nlp 2.00">:</ins>
+            <ins title="nlp 2.00">scripsi:</ins>
           </span>
         </span>
         <span id="w_490" class="ocr_word" title="bbox 1228 3057 1367 3102" lang="grc">
@@ -2562,20 +2538,19 @@
             <ins class="alt" title="nlp 1.00">21</ins>
           </span>
         </span>
-        <span id="w_496" class="ocr_word" title="bbox 156 3132 242 3152">
+        <span id="w_496_0" class="ocr_word" title="bbox 156 3132 242 3152">
           <span class="alternatives">
-            <ins title="nlp 2.00">χατὰ</ins>
+            <ins class="alt" title="nlp 2.00">κατὰ</ins>
+          </span>
+        </span>
+        <span id="w_496_1" class="ocr_word" title="bbox 156 3132 242 3152">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_497" class="ocr_word" title="bbox 268 3120 387 3163">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">scrips]</ins>
-            <del title="nlp 0.90">scrips</del>
-          </span>
-        </span>
-        <span id="w_498" class="ocr_word" title="bbox 402 3131 409 3151">
-          <span class="alternatives">
-            <ins title="nlp 2.00">:</ins>
+            <ins title="nlp 2.00">scripsi:</ins>
           </span>
         </span>
         <span id="w_499" class="ocr_word" title="bbox 437 3119 492 3152" lang="grc">
@@ -2631,12 +2606,6 @@
             <del title="nlp 0.90">cf.</del>
           </span>
         </span>
-        <span id="w_509" class="ocr_word" title="bbox 1713 3114 1872 3146">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Ammon.</ins>
-            <del title="nlp 0.90">Ammon.</del>
-          </span>
-        </span>
       </span>
       <span class="ocr_line" title="bbox 74 3172 1377 3222">
         <span id="w_510" class="ocr_word" title="bbox 74 3175 132 3210">
@@ -2647,13 +2616,7 @@
         </span>
         <span id="w_511" class="ocr_word" title="bbox 154 3177 217 3210">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">168</ins>
-          </span>
-        </span>
-        <span id="w_512" class="ocr_word" title="bbox 226 3187 241 3203">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">V</ins>
-            <del title="nlp 0.90">V</del>
+            <ins title="nlp 2.00">168v</ins>
           </span>
         </span>
         <span id="w_513" class="ocr_word" title="bbox 385 3177 427 3210">
